# pybind_demo

./: CMakeLists.txt
pybind_demo/_libs/src/: CMakeLists.txt  mylib.cpp  mylib_object.cpp
